--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -104,7 +104,7 @@ header.app-header {
       text-align: center;
       .auth-text {
         font-weight: normal;
-        padding-bottom: 5px;
+        padding-bottom: 10px;
       }
 
       .auth-button {
